# modern-cpp-chalktalk

./: CMakeLists.txt  README.md
design-patterns/: decorator.cpp  factory.cpp  interfaces.cpp  observer.cpp
docker/: Makefile
docker/centos/: Dockerfile  factory
docker/ubuntu/: Dockerfile
linting/: tolint.cpp
misc/: any.cpp  bench.cpp  debug.cpp  smart.cpp  variant.cpp
testing/: driver.cpp  mock.cpp  tests.cpp
tooling/: asan.cpp  tsan.cpp  tsan_good.cpp
